--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,7 @@
       "esnext.asynciterable"
     ],
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "server/dist",
     "moduleResolution": "node",
     "removeComments": true,
     "noImplicitAny": true,
