--- a/server/package.json
+++ b/server/package.json
@@ -1,39 +1,39 @@
 {
-   "name": "coffeemap",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "@types/bcrypt": "^3.0.0",
-      "@types/connect-flash": "0.0.36",
-      "@types/connect-redis": "0.0.16",
-      "@types/cookie-parser": "^1.4.2",
-      "@types/express": "^4.17.8",
-      "@types/express-session": "^1.17.3",
-      "@types/node": "^8.0.29",
-      "@types/passport": "^1.0.4",
-      "@types/passport-local": "^1.0.33",
-      "@types/redis": "^2.8.28",
-      "nodemon": "^2.0.6",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "bcrypt": "^5.0.0",
-      "class-validator": "^0.12.2",
-      "connect-flash": "^0.1.1",
-      "connect-redis": "^5.0.0",
-      "cookie-parser": "^1.4.5",
-      "express": "^4.17.1",
-      "express-session": "^1.17.1",
-      "passport": "^0.4.1",
-      "passport-local": "^1.0.0",
-      "pg": "^8.4.2",
-      "redis": "^3.0.2",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "^0.2.29"
-   },
-   "scripts": {
-      "watch": "tsc -w",
-      "dev": "nodemon src/index.ts"
-   }
+    "name": "coffeemap",
+    "version": "0.0.1",
+    "description": "Server for Coffeemap",
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/connect-flash": "0.0.36",
+        "@types/connect-redis": "0.0.16",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/express": "^4.17.8",
+        "@types/express-session": "^1.17.3",
+        "@types/node": "^8.0.29",
+        "@types/passport": "^1.0.4",
+        "@types/passport-local": "^1.0.33",
+        "@types/redis": "^2.8.28",
+        "nodemon": "^2.0.6",
+        "ts-node": "3.3.0",
+        "typescript": "3.3.3333"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.0",
+        "class-validator": "^0.12.2",
+        "connect-flash": "^0.1.1",
+        "connect-redis": "^5.0.0",
+        "cookie-parser": "^1.4.5",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "pg": "^8.4.2",
+        "redis": "^3.0.2",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.2.29"
+    },
+    "scripts": {
+        "watch": "tsc -w",
+        "dev": "nodemon src/index.ts"
+    }
 }
