--- a/web/package.json
+++ b/web/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "with-chakra-ui-typescript",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.0.0",
-    "@chakra-ui/theme-tools": "1.0.0",
-    "@emotion/react": "11.1.1",
-    "@emotion/styled": "11.0.0",
-    "framer-motion": "^2.9.4",
-    "next": "latest",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "typescript": "4.0.5"
-  },
-  "license": "MIT"
+    "name": "coffeemap-web",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^1.1.0",
+        "@emotion/react": "^11.1.4",
+        "@emotion/styled": "^11.0.0",
+        "@headlessui/react": "^0.2.0",
+        "@tailwindcss/forms": "^0.2.1",
+        "formik": "^2.2.6",
+        "framer-motion": "^3.1.1",
+        "next": "latest",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "yup": "^0.32.8"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.16",
+        "@types/react": "^17.0.0",
+        "autoprefixer": "10.0.2",
+        "postcss": "8.1.7",
+        "tailwindcss": "^2.0.1",
+        "typescript": "^4.1.3"
+    },
+    "license": "MIT"
 }
