--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "connect-flash": "^0.1.1",
         "connect-redis": "^5.0.0",
         "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "passport": "^0.4.1",
