--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
         "@types/connect-flash": "0.0.36",
         "@types/connect-redis": "0.0.16",
         "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.9",
         "@types/express": "^4.17.8",
         "@types/express-session": "^1.17.3",
         "@types/node": "^8.0.29",
