--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
         "@emotion/styled": "^11.0.0",
         "@headlessui/react": "^0.2.0",
         "@tailwindcss/forms": "^0.2.1",
+        "axios": "^0.21.1",
         "formik": "^2.2.6",
         "framer-motion": "^3.1.1",
         "next": "latest",
@@ -20,6 +21,8 @@
         "yup": "^0.32.8"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/cors": "^2.8.9",
         "@types/node": "^14.14.16",
         "@types/react": "^17.0.0",
         "autoprefixer": "10.0.2",
