--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,10 @@
         "@headlessui/react": "^0.2.0",
         "@tailwindcss/forms": "^0.2.1",
         "axios": "^0.21.1",
+        "cookies": "^0.8.0",
         "formik": "^2.2.6",
         "framer-motion": "^3.1.1",
+        "http-proxy": "^1.18.1",
         "next": "latest",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
@@ -23,6 +25,7 @@
     "devDependencies": {
         "@types/axios": "^0.14.0",
         "@types/cors": "^2.8.9",
+        "@types/http-proxy": "^1.17.4",
         "@types/node": "^14.14.16",
         "@types/react": "^17.0.0",
         "autoprefixer": "10.0.2",
