🎣 Check current user

--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
+        "ioredis": "^4.19.4",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "path": "^0.12.7",
         "pg": "^8.4.2",
         "redis": "^3.0.2",
         "reflect-metadata": "^0.1.13",
