--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
         "@types/cors": "^2.8.9",
         "@types/express": "^4.17.8",
         "@types/express-session": "^1.17.3",
-        "@types/node": "^8.0.29",
+        "@types/node": "^8.10.66",
         "@types/passport": "^1.0.4",
         "@types/passport-local": "^1.0.33",
         "@types/redis": "^2.8.28",
@@ -25,6 +25,7 @@
         "connect-redis": "^5.0.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "dotenv-safe": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "ioredis": "^4.19.4",
@@ -38,6 +39,7 @@
     },
     "scripts": {
         "watch": "tsc -w",
+        "build": "tsc",
         "dev": "nodemon src/index.ts"
     }
 }
