--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
     },
     "scripts": {
         "watch": "tsc -w",
+        "dev": "nodemon dist/index.js",
         "build": "tsc",
-        "dev": "nodemon src/index.ts"
+        "start": "node dist/index.js"
     }
 }
