--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
         "cookies": "^0.8.0",
         "formik": "^2.2.6",
         "framer-motion": "^3.1.1",
+        "google-map-react": "^2.1.9",
         "next": "latest",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
