--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
         "@emotion/react": "^11.1.4",
         "@emotion/styled": "^11.0.0",
         "@headlessui/react": "^0.2.0",
+        "@heroicons/react": "^1.0.1",
         "@tailwindcss/forms": "^0.2.1",
         "axios": "^0.21.1",
         "cookies": "^0.8.0",
